--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.1/css/all.css"
     integrity="sha384-O8whS3fhG2OnA5Kas0Y9l3cfpmYjapjI0E4theH4iuMD+pLhbf6JI0jIMfYcK3yZ" crossorigin="anonymous">
+    <!-- google font -->
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
 
@@ -30,8 +33,9 @@
             </div>
             <button id="create-slider" class="btn btn-primary px-5">Create slider</button>
         </div>
+
         <!-- spinner  -->
-        <div class="text-center d-none" id="loadingSpinner">
+        <div id="loading-Spinner" class="text-center d-none">
             <div class="spinner-border text-success" role="status">
                 <span class="sr-only">Loading...</span>
             </div>
